# project-raytracer

./: .gitignore  CMakeLists.txt  Makefile  README.md  Run.ps1  conanfile.txt  dependencies.sh  docker-compose.yaml  init.sh  startup.sh
docker/: Dockerfile.frontend  Dockerfile.raytracer
src/: CMakeLists.txt  Makefile  app.cpp  main copy.cpp  main.cpp  main_all.cpp  main_viewport.cpp  vulkan.cpp
src/core/: CMakeLists.txt  Camera.cpp  Camera.h  Color.h  ColorManipulator.cpp  ColorManipulator.h  Cuboid.h  Cylinder.h  Dielectric.cpp  Example.h  HitRecord.cpp  HitRecord.h  Image.cpp  Image.h  Initializer.h  Lambertian.cpp  Light.cpp  Light.h  Material.cpp  Material.h  MaterialDielectric.cpp  MaterialDielectric.h  MaterialDiffuseLight.cpp  MaterialDiffuseLight.h  MaterialIsotropic.cpp  MaterialIsotropic.h  MaterialLambertian.cpp  MaterialLambertian.h  MaterialMetal.cpp  MaterialMetal.h  Object.cpp  Object.h  ObjectCuboid.cpp  ObjectCuboid.h  ObjectCylinder.cpp  ObjectCylinder.h  ObjectSphere.cpp  ObjectSphere.h  Pixel.cpp  Ray.cpp  (+13 more)
src/core/Camera/: CMakeLists.txt  Camera.cpp  Camera.h
src/core/Color/: CMakeLists.txt  Color.cpp  Color.h  ColorManipulator.cpp
src/core/HitRecord/: CMakeLists.txt  HitRecord.cpp  HitRecord.h
src/core/Image/: CMakeLists.txt  Image.cpp  Image.h
src/core/Light/: CMakeLists.txt  Light.cpp  Light.h
src/core/Material/: CMakeLists.txt  Dielectric.h  Lambertian.cpp  Lambertian.h  Material.cpp  Material.h  Metal.cpp  Metal.h
src/core/Object/: CMakeLists.txt  Cuboid.cpp  Cuboid.h  Cylinder.cpp  Cylinder.h  Object.cpp  Object.h  Sphere.cpp  Sphere.h
src/core/Pixel/: CMakeLists.txt  Pixel.h
src/core/Ray/: CMakeLists.txt  Ray.cpp  Ray.h
src/core/Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.h
src/core/Scene/: CMakeLists.txt  Scene.cpp  Scene.h
src/core/Texture/: CMakeLists.txt  Texture.h
src/gui/: CMakeLists.txt  main.cpp  main_gui.cpp  mainwindow.cpp  mainwindow.h  mainwindow_ui.py  openglwidget.cpp  openglwidget.h
src/gui_b/: main_gui.cpp
src/gui_less/: CMakeLists.txt  main.cpp
src/nogui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/utils/: CMakeLists.txt  Interval.cpp  Interval.h  Math.cpp  Math.h  Random.cpp  Random.h  ThreadPool.h  Timer.cpp  Timer.h  utils.h
src/utils/FileIO/: FileIO.h
src/utils/Interval/: CMakeLists.txt  Interval.cpp  Interval.h
src/utils/Math/: CMakeLists.txt  Math.cpp  Math.h  Vec3.h
src/utils/Random/: CMakeLists.txt  Random.cpp  Random.h
src/utils/ThreadPool/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h
src/utils/Utilities/: FileIO.h
tests/: CMakeLists.txt
